fix: 간단한 analytics부분 파일수정